fixed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,9 @@
   --scrollbar-track: #979797;
   --scrollbar-thumb: #d9d9d9;
 
+  --scrollbar-track-text: #80724b;
+  --scrollbar-thumb-text: #968658;
+
   --green: #4eb245;
   --orange: #f8d146;
   --grey: #8994ae;
